--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "zleth",
   "version": "1.0.0",
   "description": "Zleed's API",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.ts",
     "setup": "npm install"
   },
   "repository": {
@@ -18,7 +18,22 @@
   },
   "homepage": "https://zleed.ga",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-ws": "^5.0.2"
+    "express-ws": "^5.0.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.7.5",
+    "url-safe-string": "^1.1.0"
+  },
+  "devDependencies": {
+    "@tsconfig/node16": "^1.0.3",
+    "@types/body-parser": "^1.19.2",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.14",
+    "nodemon": "^2.0.20",
+    "typescript": "^4.9.3"
   }
 }
