--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.ts",
   "scripts": {
     "start": "nodemon index.ts",
-    "setup": "npm install"
+    "setup": "npm install",
+    "dist": "tsc",
+    "build": "npm run setup && npm run dist",
+    "lint": "eslint . --ext .ts"
   },
   "repository": {
     "type": "git",
@@ -33,6 +36,9 @@
     "@types/body-parser": "^1.19.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
+    "@typescript-eslint/eslint-plugin": "^5.45.0",
+    "@typescript-eslint/parser": "^5.45.0",
+    "eslint": "^8.29.0",
     "nodemon": "^2.0.20",
     "typescript": "^4.9.3"
   }
