--- a/package.json
+++ b/package.json
@@ -29,13 +29,17 @@
     "express-ws": "^5.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.5",
-    "url-safe-string": "^1.1.0"
+    "url-safe-string": "^1.1.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@tsconfig/node16": "^1.0.3",
+    "@types/bcrypt": "^5.0.0",
     "@types/body-parser": "^1.19.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
+    "@types/jsonwebtoken": "^8.5.9",
+    "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
     "eslint": "^8.29.0",
