--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "start": "nodemon index.ts",
-    "setup": "npm install",
+    "setup": "yarn",
     "dist": "tsc",
     "build": "npm run setup && npm run dist",
     "lint": "eslint . --ext .ts"
